# Ravichander-Goli

./: README.md
projects/agentops-timeline/: .gitignore  Makefile  README.md  pyproject.toml
projects/agentops-timeline/src/agentops_timeline/: __init__.py  cli.py  render.py  store.py
projects/agentops-timeline/tests/: test_render.py  test_store.py
projects/ai-dev-workflow-starter-kit/: .mcp.example.json  README.md
projects/ai-dev-workflow-starter-kit/docs/: ai-workflow.md  decision-template.md
